Change inmemorymock to mockito mock